--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Kapitał w OFE<br>przenieść do ZUS, czy do IKE?</h1>
+          <h1 class="mb-5">Reforma OFE<br>wybrać do ZUS czy do IKE?</h1>
           <h4 class="mb-5">Zamiast zgadywać, policz który wariant jest dla Ciebie korzystniejszy.</h4>
           </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -63,25 +63,28 @@
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/static/img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Wariant domyślny: IKE</h2>
-          <p class="lead mb-0">Państwo potrąca Ci 15% z tytułu opłaty przekształceniowej, a resztę przelewa na specjalnie utworzony rachunek IKE.
-            Tych pieniędzy nie będzie można wycofać przed emeryturą, natomiast będzie można je zainwestować, więc mogą zarówno przynieść zysk, jak i stratę.
-            Ponadto, środki w IKE, niezależnie od tego jak będą zainwestowane, czy nie, będzie podgryzać inflacja.
-            Na tę chwilę rząd obiecuje, że środki te nie będą dalej opodatkowane. Po osiągnięciu wieku emerytalnego teoretycznie można je wypłacić,
-            lecz trzeba będzie płacić podatek Belki od dalszych zysków. Jeśli środki skończą się przed śmiercią, to dodatek znika,
-            natomiast niewykorzystane środki podlegają dziedziczeniu.</p>
+          <p class="lead mb-0">Państwo potrąci Ci 15% z tytułu opłaty przekształceniowej, a resztę przelewa na specjalnie utworzony rachunek IKE.
+            Tych pieniędzy nie będzie można wypłacić przed emeryturą, natomiast zostaną one zainwestowane, więc mogą zarówno przynieść zysk, jak i stratę.
+            Ponadto, środki w IKE, niezależnie od tego jak będą zainwestowane, będzie podgryzać inflacja.
+            Może się zdarzyć, że nominalnie IKE wypracuje zysk, lecz mniejszy od inflacji.
+            Nie będziemy mieli wpływu na politykę inwestycyjną w nowym IKE, wynika ona wprost z ustawy i pozostawia pewną swobodę funduszowi inwestycyjnemu.
+            Na chwilę obecną rząd obiecuje, że środki te nie będą dalej opodatkowane. Po osiągnięciu wieku emerytalnego teoretycznie zostaną one wypłacone, lecz w przypadku ich jednorazowej wypłaty i natychmiastowej inwestycji w inne aktywo, od nowej inwestycji trzeba będzie płacić podatek Belki od dalszych zysków.
+            Nie jest jasne czy w przypadku wypłaty ratalnej środki dalej będą pracować.
+            Jeśli środki skończą się przed śmiercią, to dodatek znika, natomiast niewykorzystane środki podlegają dziedziczeniu (bez podatku).</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('/static/img/bg-showcase-2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Wariant alternatywny: ZUS</h2>
-          <p class="lead mb-0">Cała wartość rejestru OFE dopisywana jest do Twojego kapitału emerytalnego - bez dodatkowej opłaty zamieniasz fizyczne środki
-            na obietnicę wyższej emerytury. Ten kapitał historycznie były waloryzowane korzystnie - historyczne wskaźniki waloryzacji były zauważalnie wyższe niż inflacja.
-            Po osiągnięciu wieku emerytalnego ZUS wylicza wysokość świadczenia emerytalnego w oparciu m. in. o zgromadzony kapitał (wliczając jego waloryzację),
-            więc może się to przełożyć na wyższą emeryturę w przyszłości, niż w przypadku wyboru wariantu z IKE.
-            Emerytura wypłacana jest do końca życia, podlega podatkowi dochodowemu (ale i też kwocie wolnej od podatku) oraz waloryzacji, która ustawowo powinna być wyższa niż oficjalna inflacja.
+          <p class="lead mb-0">Cała wartość rejestru OFE dopisywana jest do Twojego kapitału emerytalnego - bez dodatkowej opłaty zamieniasz fizyczne aktywa na obietnicę wyższej emerytury.
+            Ten kapitał historycznie był waloryzowane dość korzystnie - wskaźniki waloryzacji były zauważalnie wyższe niż inflacja.
+            Nie ma natomiast gwarancji, że wskaźniki waloryzacji w kolejnych latach będą tak samo korzystne. Wręcz przeciwnie, wraz ze wzrostem liczby emerytów w stosunku do osób pracujących, można się spodziewać, że wskaźnik waloryzacji będzie spadał.
+            Po osiągnięciu wieku emerytalnego ZUS wylicza wysokość świadczenia emerytalnego w oparciu m. in. o zgromadzony kapitał (wliczając jego waloryzację i ew. kapitał początkowy), więc ZUS wypłaci wyższą emeryturę w przyszłości, niż gdyby wybrać wariant z IKE.
+            Emerytura wypłacana jest do końca życia, podlega podatkowi dochodowemu (ale i też kwocie wolnej od podatku) oraz waloryzacji, która ustawowo powinna być wyższa niż oficjalna inflacja w gospodarstwach emeryckich. Takiej gwarancji nie mają inwestycje w ramach IKE.
+            Stawka podatku dochodowego może się zmienić, więc wybierając ZUS nie wiemy z góry jaki podatek zapłacimy na emeryturze. Na chwilę obecną emerytura opodatkowana jest wg tzw. skali podatkowej, a dla lwiej części stawka podatkowa wynosi 17% lub mniej.
             Nie ma ryzyka przejedzenia całego dodatku z OFE (emerytura wypłacana jest dożywotnio), w zamian środki nie podlegają dziedziczeniu.
-            W przypadku, gdy wartość jednostki OFE spadnie w trakcie wykonywania reforny emerytalnej, do ZUS transferowany jest kapitał z OFE wg wycen z dnia 15 kwietnia 2019r.
+            Wybór ZUS może się opłacić, jeśli spodziewasz się, że przed Tobą długie życie.
           </p>
 
         </div>
@@ -92,10 +95,11 @@
           <h2>Wybrane założenia przyjęte w obliczeniach</h2>
 
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">IKE: po osiągnięciu wieku emerytalnego wycofujemy pieniądze z IKE i trzymamy je w tej samej inwestycji płacąc podatek Belki, wypłacając co miesiąc kwotę proporcjonalną do oczekiwanej długości trwania życia</li>
-              <li class="list-group-item">ZUS: dla bezpieczeństwa przyjęto, że przyszła stopa waloryzacji kapitału wyniesie 5.2% (średnia waloryzacja kapitału w ostatnich 19 latach wynosila 6.5%, a w ostatnich dwoch latach nawet 8-9%)</li>
+              <li class="list-group-item">IKE: po osiągnięciu wieku emerytalnego wycofujemy środki z IKE w jednej transzy i inwestujemy je płacąc podatek Belki, wypłacając co miesiąc kwotę proporcjonalną do oczekiwanej długości trwania życia</li>
+              <li class="list-group-item">ZUS: przyjęto, że przyszła stopa waloryzacji kapitału wyniesie 5.29% (średnia waloryzacja kapitału w ostatnich 20 latach wynosila 6.67%, a w ostatnich trzech latach nawet 8-9%)</li>
+              <li class="list-group-item">ZUS: przyjęto, że przyszła stopa waloryzacji emerytury wyniesie 3.63% (średnia waloryzacja emerytury w ostatnich 20 latach wynosila 3.78%)</li>
               <li class="list-group-item">Czas trwania życia brany jest z danych dostarczanych przez GUS - w oparciu o te dane (i Twoją płeć) wyliczana jest liczba lat na emeryturze</li>
-              <li class="list-group-item">Przy wyliczaniu podatku dochodowego brana jest pod uwagę kwota wolna od podatku oraz standardowe odliczenia od emerytury</li>
+              <li class="list-group-item">Przy wyliczaniu podatku dochodowego brana jest pod uwagę kwota wolna od podatku oraz standardowe odliczenia od emerytury (składka zdrowotna)</li>
             </ul>
         </div>
       </div>
@@ -118,16 +122,16 @@
           <form method="POST" action="/wynik" id="wynik_form">
             <div class="form-row">
               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <p>Jak myślisz, jaką roczną stopę zwrotu będzie miała Twoja potencjalna inwestycja w IKE do czasu przejścia na emeryturę? [%]</p>
+                <p>Jakiej średniej rocznej stopy zwrotu spodziewasz się z inwestycji w IKE do czasu przejścia na emeryturę? [%]</p>
                 <input type="number" name="r" min="-100" value="5" step="0.01" required><br><br>
 
                 <p>Roczna stopa zwrotu z IKE w trakcie emerytury [%]</p>
-                <input type="number" name="r_em" min="-100" value="2" step="0.01" required><br><br>
+                <input type="number" name="r_em" min="-100" value="1" step="0.01" required><br><br>
 
-                <p>Przyjęta stopa inflacji w kolejnych latach [%]</p>
-                <input type="number" name="inflacja" value="3.0" step="0.01" required><br><br>
+                <p>Przyjęta długoterminowa stopa inflacji [%]</p>
+                <input type="number" name="inflacja" value="2.5" step="0.01" required><br><br>
 
-                <p>Prognozowana emerytura (brutto) (w dzisiejszych kwotach)</p>
+                <p>Prognozowana emerytura (brutto) [PLN]</p>
                 <input type="number" name="prognozowana_emerytura_brutto" min="0" step="1.00" required><br><br>
 
                 <p>Prognozowana stawka podatkowa w czasie emerytury [%]</p>
