--- a/templates/index.html
+++ b/templates/index.html
@@ -153,7 +153,7 @@
                 <input type="number" name="wiek" min="1" max="65" step="1.00" required>
               </div>
               <div class="col-12 col-md-3 my-auto">
-                <input type="submit" class="btn btn-block btn-lg btn-primary" value="Wyślij">
+                <input type="submit" class="btn btn-block btn-lg btn-primary" value="Przelicz">
               </div>
             </div>
           </form>
